feat: Add essential dependencies and setup for PanchoPolyBot
Installs and configures necessary libraries for trading bot functionality. This includes:
- WebSocket client (`ws`) for real-time communication.
- `ethers` for blockchain interaction.
- `axios` for HTTP requests.
- `@polymarket/clob-client` for interacting with the CLOB.
- `dotenv` for environment variable management.
- `chalk` for colored console output.

Also updates the HTML to import these dependencies via CDN where applicable, and refactors UI components to reflect a more robust connection status and updated iconography. The bot backend initialization now includes more specific error handling for missing credentials.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
     "react/": "https://esm.sh/react@^19.2.3/",
     "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@^3.6.0"
+    "recharts": "https://esm.sh/recharts@^3.6.0",
+    "axios": "https://esm.sh/axios@^1.13.2",
+    "process": "https://esm.sh/process@^0.11.10",
+    "ws": "https://esm.sh/ws@^8.19.0",
+    "dotenv": "https://esm.sh/dotenv@^17.2.3",
+    "ethers": "https://esm.sh/ethers@^6.16.0",
+    "chalk": "https://esm.sh/chalk@^5.6.2",
+    "@polymarket/clob-client": "https://esm.sh/@polymarket/clob-client@^5.2.0"
   }
 }
 </script>
