--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     "dotenv": "https://esm.sh/dotenv@^17.2.3",
     "ethers": "https://esm.sh/ethers@^6.16.0",
     "chalk": "https://esm.sh/chalk@^5.6.2",
-    "@polymarket/clob-client": "https://esm.sh/@polymarket/clob-client@^5.2.0"
+    "@polymarket/clob-client": "https://esm.sh/@polymarket/clob-client@^5.2.0",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0"
   }
 }
 </script>
