--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     "ethers": "https://esm.sh/ethers@^6.16.0",
     "chalk": "https://esm.sh/chalk@^5.6.2",
     "@polymarket/clob-client": "https://esm.sh/@polymarket/clob-client@^5.2.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0"
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0",
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
   }
 }
 </script>
