--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     "chalk": "https://esm.sh/chalk@^5.6.2",
     "@polymarket/clob-client": "https://esm.sh/@polymarket/clob-client@^5.2.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.39.0",
-    "@google/genai": "https://esm.sh/@google/genai@^1.35.0"
+    "@google/genai": "https://esm.sh/@google/genai@^1.35.0",
+    "dotenv/": "https://esm.sh/dotenv@^17.2.3/"
   }
 }
 </script>
